src/objects/Corporate_Client__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporate Clients</relationshipLabel>
        <relationshipName>Corporate_Clients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commission_Records__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission – Records</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Corporate Clients (Commission – Records)</relationshipLabel>
        <relationshipName>Corporate_Clients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission – Reporting</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Corporate Clients (Commission – Records)</relationshipLabel>
        <relationshipName>Corporate_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Corporate Clients</relationshipLabel>
        <relationshipName>Corporate_Clients</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standing_Orders__c</fullName>
        <label>Standing Orders</label>
        <type>TextArea</type>
    </fields>
    <label>Corporate Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Corporate Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>